--- a/src/assets/AppLayout.module.css
+++ b/src/assets/AppLayout.module.css
@@ -1,7 +1,7 @@
 .mainContainer {
-  display: flex;
   flex-grow: 1;
   background-color: var(--main-bg, unset);
+  overflow: auto;
 }
 
 .mainMainContainer {
