--- a/src/assets/SideBar.module.css
+++ b/src/assets/SideBar.module.css
@@ -1,6 +1,7 @@
 .sidebarContainer {
   display: flex;
   position: fixed;
+  z-index: 9;
   /* height: 100vh; */
 }
 
