--- a/src/assets/common.module.css
+++ b/src/assets/common.module.css
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   color: var(--text-color, unset);
-  flex-grow: 1;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .shadowLight {
